--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h2>builds</h2>
-<a href="itms-services://?action=download-manifest&url=Website manifest.plist"> App</a></body>
+<a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/lk72ihk3o0vt6c6/manifest.plist"> App</a></body>
 </body>
 </html>
